2008-09-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Fix for memory leak

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-prepare-copy-dialog.cc:
	* src/gnome-cmd-prepare-move-dialog.cc:
	* src/gnome-cmd-prepare-xfer-dialog.cc:
	* src/gnome-cmd-python-plugin.cc:
	* src/gnome-cmd-quicksearch-popup.cc:
	* src/gnome-cmd-search-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	GnomeCmdFileList: more C++ rework

2008-09-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	Fix the bug introduced in rev. #1978

2008-09-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-search-dialog.cc:
	File search: align regex/shell radio buttons

2008-09-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	Widen up connection combo

2008-08-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-quicksearch-popup.cc:
	* src/gnome-cmd-user-actions.cc:
	Convert GnomeCmdFileSelector struct into C++ class, part 3

2008-08-27  Takao Fujiwara  <Takao.Fujiwara@Sun.COM>

	* src/gnome-cmd-file.cc:
	Fixed problem #548948 (crash when home directory contains non-UTF8 characters)

2008-08-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-list-popmenu.cc:
	* src/gnome-cmd-user-actions.cc:
	Move gnome_cmd_file_selector_show_mkdir_dialog() to gnome-cmd-user-actions.cc

2008-08-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-file-collection.cc:
	* src/gnome-cmd-file-collection.h:
	* src/gnome-cmd-file-list.cc:
	Convert GnomeCmdFileCollection struct into C++ class

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-file-collection.cc:
	* src/gnome-cmd-file-collection.h:
	* src/gnome-cmd-file-list.cc: