@@ -1,3 +1,8 @@
+2008-09-05  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file-list.cc:
+	GnomeCmdFileList: do not allocate dynamically shown_files
+
 2008-09-04  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-file-list.cc:
